--- a/SalonCrawler/SalonCrawler.csproj
+++ b/SalonCrawler/SalonCrawler.csproj
@@ -36,10 +36,10 @@
       <HintPath>..\packages\HtmlAgilityPack.1.4.9\lib\Net45\HtmlAgilityPack.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections">
-      <HintPath>..\..\..\..\..\Downloads\NHibernate-4.0.1.GA-bin\Required_Bins\Iesi.Collections.dll</HintPath>
+      <HintPath>..\packages\Iesi.Collections.4.0.1.4000\lib\net40\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
-      <HintPath>..\..\..\..\..\Downloads\NHibernate-4.0.1.GA-bin\Required_Bins\NHibernate.dll</HintPath>
+      <HintPath>..\packages\NHibernate.4.0.1.4000\lib\net40\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -55,6 +55,7 @@
     <Compile Include="Comment.cs" />
     <Compile Include="Crawler.cs" />
     <Compile Include="CrawlerHelper.cs" />
+    <Compile Include="Logger.cs" />
     <Compile Include="Newspaper.cs" />
     <Compile Include="NHibernateHelper.cs" />
     <Compile Include="Post.cs" />
@@ -62,6 +63,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repost.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="Utils.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
