--- a/SalonCrawler/SalonCrawler.csproj
+++ b/SalonCrawler/SalonCrawler.csproj
@@ -55,12 +55,14 @@
     <Compile Include="Comment.cs" />
     <Compile Include="Crawler.cs" />
     <Compile Include="CrawlerHelper.cs" />
+    <Compile Include="Link.cs" />
     <Compile Include="Logger.cs" />
     <Compile Include="Newspaper.cs" />
     <Compile Include="NHibernateHelper.cs" />
     <Compile Include="Post.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tag.cs" />
     <Compile Include="User.cs" />
     <Compile Include="Utils.cs" />
   </ItemGroup>
@@ -74,6 +76,12 @@
     <EmbeddedResource Include="Newspaper.hbm.xml" />
     <EmbeddedResource Include="Post.hbm.xml" />
     <EmbeddedResource Include="User.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Tag.hbm.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Link.hbm.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
